; ModuleID = '/home/carl/AnghaBench/systemd/src/analyze/extr_analyze.c_times_in_range.c'
source_filename = "/home/carl/AnghaBench/systemd/src/analyze/extr_analyze.c_times_in_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unit_times = type { i64 }
%struct.boot_times = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.unit_times*, %struct.boot_times*)* @times_in_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @times_in_range(%struct.unit_times* %0, %struct.boot_times* %1) #0 {
  %3 = alloca %struct.unit_times*, align 8
  %4 = alloca %struct.boot_times*, align 8
  store %struct.unit_times* %0, %struct.unit_times** %3, align 8
  store %struct.boot_times* %1, %struct.boot_times** %4, align 8
  %5 = load %struct.unit_times*, %struct.unit_times** %3, align 8
  %6 = icmp ne %struct.unit_times* %5, null
  br i1 %6, label %7, label %20

7:                                                ; preds = %2
  %8 = load %struct.unit_times*, %struct.unit_times** %3, align 8
  %9 = getelementptr inbounds %struct.unit_times, %struct.unit_times* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %7
  %13 = load %struct.unit_times*, %struct.unit_times** %3, align 8
  %14 = getelementptr inbounds %struct.unit_times, %struct.unit_times* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.boot_times*, %struct.boot_times** %4, align 8
  %17 = getelementptr inbounds %struct.boot_times, %struct.boot_times* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp sle i64 %15, %18
  br label %20

20:                                               ; preds = %12, %7, %2
  %21 = phi i1 [ false, %7 ], [ false, %2 ], [ %19, %12 ]
  %22 = zext i1 %21 to i32
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
